--- a/example/bar-chart.html
+++ b/example/bar-chart.html
@@ -83,9 +83,9 @@
         series.tooltipText = "[{categoryX}: bold]{valueY}[/]";
         series.columns.template.strokeWidth = 0;
 
-        series.stacked = true;
+        // series.stacked = true;
 
-        series.tooltip.pointerOrientation = "vertical";
+        // series.tooltip.pointerOrientation = "vertical";
 
         series.columns.template.column.cornerRadiusTopLeft = 10;
         series.columns.template.column.cornerRadiusTopRight = 10;
