--- a/example/bar-chart.html
+++ b/example/bar-chart.html
@@ -1,134 +1,69 @@
-<style>
-    #chartdiv {
-        width: 100%;
-        height: 500px;
-    }
-</style>
+<html>
+    <head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.0/Chart.bundle.min.js"></script>
+    </head>
+    <body>
+        <canvas id="myChart"></canvas>
+        <script>
+            var config = {
+                type: "bar",
+                data: {
+                    labels: [
+                        "1st Arrondissements of Paris",
+                        "2nd Arrondissements of Paris",
+                        "3rd Arrondissements of Paris",
+                        "4th Arrondissements of Paris",
+                        "18th Arrondissements of Paris",
+                        "19th Arrondissements of Paris",
+                        "20th Arrondissements of Paris"
+                    ],
+                    datasets: [
+                        {
+                            type: "line",
+                            label: "Susceptibility to cardiovascular disease",
+                            data: [70, 72, 73, 80, 90, 95, 96],
+                            borderColor: "black",
+                            fill: false
+                        },
+                        {
+                            type: "bar",
+                            label: "Good Behaviours",
+                            backgroundColor: "#91f76c",
+                            data: [85, 70, 80, 81, 56, 55, 40]
+                        },
+                        {
+                            type: "bar",
+                            label: "Bad Behaviours",
+                            backgroundColor: "#fc4b4b",
+                            data: [-35, -30, -30, -71, -76, -75, -70]
+                        }
+                    ]
+                },
+                options: {
+                    scales: {
+                        xAxes: [
+                            {
+                                stacked: true
+                            }
+                        ],
+                        yAxes: [
+                            {
+                                stacked: true
+                            }
+                        ]
+                    },
+                    legend: {
+                        labels: {
+                            // This more specific font property overrides the global property
+                            fontColor: "black",
+                            fontSize: 20
+                        }
+                    }
+                }
+            };
 
-<!-- Resources -->
-<script src="https://www.amcharts.com/lib/4/core.js"></script>
-<script src="https://www.amcharts.com/lib/4/charts.js"></script>
-<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
-
-<!-- Chart code -->
-<script>
-    am4core.ready(function() {
-        // Themes begin
-        am4core.useTheme(am4themes_animated);
-        // Themes end
-
-        // Create chart instance
-        var chart = am4core.create("chartdiv", am4charts.XYChart);
-        chart.scrollbarX = new am4core.Scrollbar();
-
-        // Add data
-        chart.data = [
-            {
-                country: "1st",
-                sport: 12,
-                visits: 3025
-            },
-            {
-                country: "12nd",
-                sport: 12,
-                visits: 1882
-            },
-            {
-                country: "18rd",
-                sport: 12,
-                visits: 1809
-            },
-            {
-                country: "19th",
-                sport: 10,
-                visits: 1122
-            }
-        ];
-
-        prepareParetoData();
-
-        function prepareParetoData() {
-            var total = 0;
-
-            for (var i = 0; i < chart.data.length; i++) {
-                var value = chart.data[i].visits;
-                total += value;
-            }
-
-            var sum = 0;
-            for (var i = 0; i < chart.data.length; i++) {
-                var value = chart.data[i].visits;
-                sum += value;
-                chart.data[i].Bad_habit = (sum / total) * 100;
-            }
-        }
-
-        // Create axes
-        var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
-        categoryAxis.dataFields.category = "country";
-        categoryAxis.renderer.grid.template.location = 0;
-        categoryAxis.renderer.minGridDistance = 60;
-        categoryAxis.tooltip.disabled = true;
-
-        var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
-        valueAxis.renderer.minWidth = 50;
-        valueAxis.min = 0;
-        valueAxis.cursorTooltipEnabled = false;
-
-        // Create series
-        var series = chart.series.push(new am4charts.ColumnSeries());
-        series.sequencedInterpolation = true;
-        series.dataFields.valueY = "visits";
-        series.dataFields.categoryX = "country";
-        series.tooltipText = "[{categoryX}: bold]{valueY}[/]";
-        series.columns.template.strokeWidth = 0;
-
-        // series.stacked = true;
-
-        // series.tooltip.pointerOrientation = "vertical";
-
-        series.columns.template.column.cornerRadiusTopLeft = 10;
-        series.columns.template.column.cornerRadiusTopRight = 10;
-        series.columns.template.column.fillOpacity = 0.8;
-
-        // on hover, make corner radiuses bigger
-        var hoverState = series.columns.template.column.states.create("hover");
-        hoverState.properties.cornerRadiusTopLeft = 0;
-        hoverState.properties.cornerRadiusTopRight = 0;
-        hoverState.properties.fillOpacity = 1;
-
-        series.columns.template.adapter.add("fill", (fill, target) => {
-            return chart.colors.getIndex(target.dataItem.index);
-        });
-
-        var paretoValueAxis = chart.yAxes.push(new am4charts.ValueAxis());
-        paretoValueAxis.renderer.opposite = true;
-        paretoValueAxis.min = 0;
-        paretoValueAxis.max = 100;
-        paretoValueAxis.strictMinMax = true;
-        paretoValueAxis.renderer.grid.template.disabled = true;
-        paretoValueAxis.numberFormatter = new am4core.NumberFormatter();
-        paretoValueAxis.numberFormatter.numberFormat = "#'%'";
-        paretoValueAxis.cursorTooltipEnabled = false;
-
-        var paretoSeries = chart.series.push(new am4charts.LineSeries());
-        paretoSeries.dataFields.valueY = "Bad_habit";
-        paretoSeries.dataFields.categoryX = "country";
-        paretoSeries.yAxis = paretoValueAxis;
-        paretoSeries.tooltipText =
-            "Bad habit: {valueY.formatNumber('#.0')}%[/]";
-        paretoSeries.bullets.push(new am4charts.CircleBullet());
-        paretoSeries.strokeWidth = 2;
-        paretoSeries.stroke = new am4core.InterfaceColorSet().getFor(
-            "alternativeBackground"
-        );
-        paretoSeries.strokeOpacity = 0.5;
-
-        // Cursor
-        chart.cursor = new am4charts.XYCursor();
-        chart.cursor.behavior = "panX";
-    }); // end am4core.ready()
-</script>
-
-<!-- HTML -->
-<div id="chartdiv"></div>
+            var ctx = document.getElementById("myChart").getContext("2d");
+            new Chart(ctx, config);
+        </script>
+    </body>
+</html>
