--- a/example/bar-chart.html
+++ b/example/bar-chart.html
@@ -9,13 +9,13 @@
                 type: "bar",
                 data: {
                     labels: [
-                        "1st Arrondissements of Paris",
-                        "2nd Arrondissements of Paris",
-                        "3rd Arrondissements of Paris",
-                        "4th Arrondissements of Paris",
-                        "18th Arrondissements of Paris",
-                        "19th Arrondissements of Paris",
-                        "20th Arrondissements of Paris"
+                        "1st District",
+                        "2nd District",
+                        "3rd District",
+                        "4th District",
+                        "18th District",
+                        "19th District",
+                        "20th District"
                     ],
                     datasets: [
                         {
@@ -28,13 +28,13 @@
                         {
                             type: "bar",
                             label: "Good Behaviours",
-                            backgroundColor: "#91f76c",
+                            backgroundColor: "#71c6a0",
                             data: [85, 70, 80, 81, 56, 55, 40]
                         },
                         {
                             type: "bar",
                             label: "Bad Behaviours",
-                            backgroundColor: "#fc4b4b",
+                            backgroundColor: "#ffc430",
                             data: [-35, -30, -30, -71, -76, -75, -70]
                         }
                     ]
@@ -43,7 +43,10 @@
                     scales: {
                         xAxes: [
                             {
-                                stacked: true
+                                stacked: true,
+                                ticks: {
+                                    fontSize: 18
+                                }
                             }
                         ],
                         yAxes: [
@@ -56,7 +59,8 @@
                         labels: {
                             // This more specific font property overrides the global property
                             fontColor: "black",
-                            fontSize: 20
+                            fontSize: 18,
+                            minRotation: 90
                         }
                     }
                 }
