--- a/example/bar-chart.html
+++ b/example/bar-chart.html
@@ -13,6 +13,8 @@
                         "2nd District",
                         "3rd District",
                         "4th District",
+                        "16th District",
+                        "17th District",
                         "18th District",
                         "19th District",
                         "20th District"
@@ -21,7 +23,7 @@
                         {
                             type: "line",
                             label: "Susceptibility to cardiovascular disease",
-                            data: [70, 72, 73, 80, 90, 95, 96],
+                            data: [70, 72, 73, 80, 85, 86, 90, 95, 96],
                             borderColor: "black",
                             fill: false
                         },
@@ -29,13 +31,13 @@
                             type: "bar",
                             label: "Good Behaviours",
                             backgroundColor: "#71c6a0",
-                            data: [85, 70, 80, 81, 56, 55, 40]
+                            data: [85, 70, 80, 81, 70, 65, 60, 55, 40]
                         },
                         {
                             type: "bar",
                             label: "Bad Behaviours",
                             backgroundColor: "#ffc430",
-                            data: [-35, -30, -30, -71, -76, -75, -70]
+                            data: [-35, -30, -30, -71, -72, -74, -76, -75, -70]
                         }
                     ]
                 },
